# buddies

./: .gitignore  README.md  config.toml  lists_data.json  main.py  speakear_poc.py
agent/: pyproject.toml
agent/agent/: __init__.py  agent_config.py  agent_system.py  config.py  consts.py  flow.py  parser.py
agent/agent/io/: __init__.py  gemini_client.py  mock_llm_client.py
agent/agent/llm/: __init__.py  gemini_client.py  llm_client.py  mock_llm_client.py
agent/agent/plugins/: __init__.py
agent/agent/speech/: stt.py  tts.py
agent/agent/tools/: __init__.py  tool_interface.py
agent/agent/tools/event_tools/: add_event_tool.py  get_events_tool.py  models.py  remove_event_tool.py
agent/agent/tools/list_tools/: file_based_list_tool.py  get_list_by_name.py  get_lists_headers.py  list_add_item_tool.py  list_remove_item_tool.py  models.py
agent/agent/utils/: utils.py
buddy/: events_handler.py  hey_buddy_detector.py
playground/: api_poc.py  messages.txt  stt_poc_whisper.py  tts_poc.py  tts_poc_gemini.py  tts_poc_piper.py
poc_examples/: hey_buddy_detector.py  microphone_poc.py  vmd_poc.py
tests/: test_get_events_tool.py
