[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buddies-agent"
version = "0.1.0"
description = "Agent package for AI Buddies"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "duck-5" } ]
dependencies = ["tomli", "dacite", "google-generativeai"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
